--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         </header>
         <article>
             <h2>imigração em portugal</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur deserunt asperiores tenetur, sapiente deleniti ipsam ex laboriosam ratione, quisquam illo recusandae, at tempore rerum provident vitae harum similique saepe officia!</p>
+            <p>portugal hoje no ano de 2024 sofre com um problema de exedente referente a imigrantes, a mais nova instituição de acolhimento sofre com a alta demanda ja proveniente de então encerrada SEF. Hoje nos encontramos a mercer do governo para a regularização das autorizações de residencia chamada CPLP. </p>
         </article>
             <h2>limpeza de carros</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quis eius ipsa ratione ab? Asperiores, officiis assumenda ipsum nesciunt qui nulla optio maxime dolor pariatur, officia dicta quae veniam soluta.</p>
+            <p>Chamado inicialmente para a integração de uma sociedade no ramo da estética automotiva, contento-me hoje por apenas ser um funcionario do meu QUERIDO amigo denomidado também como IRMÁO, Guilherme Orth Silva.</p>
         <article>
 
         </article>
