--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>portugal hoje no ano de 2024 sofre com um problema de exedente referente a imigrantes, a mais nova instituição de acolhimento sofre com a alta demanda ja proveniente de então encerrada SEF. Hoje nos encontramos a mercer do governo para a regularização das autorizações de residencia chamada CPLP. </p>
         </article>
             <h2>limpeza de carros</h2>
-            <p>Chamado inicialmente para a integração de uma sociedade no ramo da estética automotiva, contento-me hoje por apenas ser um funcionario do meu QUERIDO amigo denomidado também como IRMÁO, Guilherme Orth Silva.</p>
+            <p>Chamado inicialmente para a integração de uma sociedade no ramo da estética automotiva, contento-me hoje por apenas ser um funcionario do meu QUERIDO amigo denomidado também como IRMÃO, Guilherme Orth Silva.</p>
         <article>
 
         </article>
